# restapi/configure_top_crush.go
@@ -15,9 +15,11 @@ import (
 	"github.com/capella/topcrush/restapi/operations/matchs"
 	"github.com/capella/topcrush/restapi/operations/slide"
 	"github.com/capella/topcrush/restapi/operations/user"
+
+	models "github.com/capella/topcrush/models"
 )
 
-//go:generate swagger generate server --target ../../top-crush --name TopCrush --spec ../swagger.yml
+//go:generate swagger generate server --target ../../top-crush --name TopCrush --spec ../swagger.yml --principal models.Principal
 
 func configureFlags(api *operations.TopCrushAPI) {
 	// api.CommandLineOptionsGroups = []swag.CommandLineOptionsGroup{ ... }
@@ -37,73 +39,83 @@ func configureAPI(api *operations.TopCrushAPI) http.Handler {
 
 	api.JSONProducer = runtime.JSONProducer()
 
+	// Applies when the "Token" header is set
+	api.APIKeyAuthAuth = func(token string) (*models.Principal, error) {
+		return nil, errors.NotImplemented("api key auth (ApiKeyAuth) Token from header param [Token] has not yet been implemented")
+	}
+
+	// Set your custom authorizer if needed. Default one is security.Authorized()
+	// Expected interface runtime.Authorizer
+	//
+	// Example:
+	// api.APIAuthorizer = security.Authorized()
 	if api.MatchsDeleteMatchsDeleteHandler == nil {
-		api.MatchsDeleteMatchsDeleteHandler = matchs.DeleteMatchsDeleteHandlerFunc(func(params matchs.DeleteMatchsDeleteParams) middleware.Responder {
+		api.MatchsDeleteMatchsDeleteHandler = matchs.DeleteMatchsDeleteHandlerFunc(func(params matchs.DeleteMatchsDeleteParams, principal *models.Principal) middleware.Responder {
 			return middleware.NotImplemented("operation matchs.DeleteMatchsDelete has not yet been implemented")
 		})
 	}
 	if api.ChatGetChatMessagesIDMessageIndexHandler == nil {
-		api.ChatGetChatMessagesIDMessageIndexHandler = chat.GetChatMessagesIDMessageIndexHandlerFunc(func(params chat.GetChatMessagesIDMessageIndexParams) middleware.Responder {
+		api.ChatGetChatMessagesIDMessageIndexHandler = chat.GetChatMessagesIDMessageIndexHandlerFunc(func(params chat.GetChatMessagesIDMessageIndexParams, principal *models.Principal) middleware.Responder {
 			return middleware.NotImplemented("operation chat.GetChatMessagesIDMessageIndex has not yet been implemented")
 		})
 	}
 	if api.MatchsGetMatchsAllHandler == nil {
-		api.MatchsGetMatchsAllHandler = matchs.GetMatchsAllHandlerFunc(func(params matchs.GetMatchsAllParams) middleware.Responder {
+		api.MatchsGetMatchsAllHandler = matchs.GetMatchsAllHandlerFunc(func(params matchs.GetMatchsAllParams, principal *models.Principal) middleware.Responder {
 			return middleware.NotImplemented("operation matchs.GetMatchsAll has not yet been implemented")
 		})
 	}
 	if api.MatchsGetMatchsLikesHandler == nil {
-		api.MatchsGetMatchsLikesHandler = matchs.GetMatchsLikesHandlerFunc(func(params matchs.GetMatchsLikesParams) middleware.Responder {
+		api.MatchsGetMatchsLikesHandler = matchs.GetMatchsLikesHandlerFunc(func(params matchs.GetMatchsLikesParams, principal *models.Principal) middleware.Responder {
 			return middleware.NotImplemented("operation matchs.GetMatchsLikes has not yet been implemented")
 		})
 	}
 	if api.SlideGetSlideUsersHandler == nil {
-		api.SlideGetSlideUsersHandler = slide.GetSlideUsersHandlerFunc(func(params slide.GetSlideUsersParams) middleware.Responder {
+		api.SlideGetSlideUsersHandler = slide.GetSlideUsersHandlerFunc(func(params slide.GetSlideUsersParams, principal *models.Principal) middleware.Responder {
 			return middleware.NotImplemented("operation slide.GetSlideUsers has not yet been implemented")
 		})
 	}
 	if api.UserGetUserHandler == nil {
-		api.UserGetUserHandler = user.GetUserHandlerFunc(func(params user.GetUserParams) middleware.Responder {
+		api.UserGetUserHandler = user.GetUserHandlerFunc(func(params user.GetUserParams, principal *models.Principal) middleware.Responder {
 			return middleware.NotImplemented("operation user.GetUser has not yet been implemented")
 		})
 	}
 	if api.UserGetUserIDUploadHandler == nil {
-		api.UserGetUserIDUploadHandler = user.GetUserIDUploadHandlerFunc(func(params user.GetUserIDUploadParams) middleware.Responder {
+		api.UserGetUserIDUploadHandler = user.GetUserIDUploadHandlerFunc(func(params user.GetUserIDUploadParams, principal *models.Principal) middleware.Responder {
 			return middleware.NotImplemented("operation user.GetUserIDUpload has not yet been implemented")
 		})
 	}
 	if api.UserPostUserHandler == nil {
-		api.UserPostUserHandler = user.PostUserHandlerFunc(func(params user.PostUserParams) middleware.Responder {
+		api.UserPostUserHandler = user.PostUserHandlerFunc(func(params user.PostUserParams, principal *models.Principal) middleware.Responder {
 			return middleware.NotImplemented("operation user.PostUser has not yet been implemented")
 		})
 	}
 	if api.ChatPutChatMessagesIDHandler == nil {
-		api.ChatPutChatMessagesIDHandler = chat.PutChatMessagesIDHandlerFunc(func(params chat.PutChatMessagesIDParams) middleware.Responder {
+		api.ChatPutChatMessagesIDHandler = chat.PutChatMessagesIDHandlerFunc(func(params chat.PutChatMessagesIDParams, principal *models.Principal) middleware.Responder {
 			return middleware.NotImplemented("operation chat.PutChatMessagesID has not yet been implemented")
 		})
 	}
 	if api.SlidePutSlideBoastHandler == nil {
-		api.SlidePutSlideBoastHandler = slide.PutSlideBoastHandlerFunc(func(params slide.PutSlideBoastParams) middleware.Responder {
+		api.SlidePutSlideBoastHandler = slide.PutSlideBoastHandlerFunc(func(params slide.PutSlideBoastParams, principal *models.Principal) middleware.Responder {
 			return middleware.NotImplemented("operation slide.PutSlideBoast has not yet been implemented")
 		})
 	}
 	if api.SlidePutSlideLikeHandler == nil {
-		api.SlidePutSlideLikeHandler = slide.PutSlideLikeHandlerFunc(func(params slide.PutSlideLikeParams) middleware.Responder {
+		api.SlidePutSlideLikeHandler = slide.PutSlideLikeHandlerFunc(func(params slide.PutSlideLikeParams, principal *models.Principal) middleware.Responder {
 			return middleware.NotImplemented("operation slide.PutSlideLike has not yet been implemented")
 		})
 	}
 	if api.SlidePutSlideSuperlikeHandler == nil {
-		api.SlidePutSlideSuperlikeHandler = slide.PutSlideSuperlikeHandlerFunc(func(params slide.PutSlideSuperlikeParams) middleware.Responder {
+		api.SlidePutSlideSuperlikeHandler = slide.PutSlideSuperlikeHandlerFunc(func(params slide.PutSlideSuperlikeParams, principal *models.Principal) middleware.Responder {
 			return middleware.NotImplemented("operation slide.PutSlideSuperlike has not yet been implemented")
 		})
 	}
 	if api.UserPutUserIDHandler == nil {
-		api.UserPutUserIDHandler = user.PutUserIDHandlerFunc(func(params user.PutUserIDParams) middleware.Responder {
+		api.UserPutUserIDHandler = user.PutUserIDHandlerFunc(func(params user.PutUserIDParams, principal *models.Principal) middleware.Responder {
 			return middleware.NotImplemented("operation user.PutUserID has not yet been implemented")
 		})
 	}
 	if api.UserPutUserIDLocationHandler == nil {
-		api.UserPutUserIDLocationHandler = user.PutUserIDLocationHandlerFunc(func(params user.PutUserIDLocationParams) middleware.Responder {
+		api.UserPutUserIDLocationHandler = user.PutUserIDLocationHandlerFunc(func(params user.PutUserIDLocationParams, principal *models.Principal) middleware.Responder {
 			return middleware.NotImplemented("operation user.PutUserIDLocation has not yet been implemented")
 		})
 	}
